--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       cursor: pointer; width: 100%;
     }
     .botao {
-      color: #FFFFFF; padding: 10px 15px; text-align: center; display: inline-block;
+      color: #FFFFFF; padding: 10px 15px; text-align: center; display: inline-block; border: 1px solid white;
       font-size: 17px; cursor: pointer; border-radius: 10px; width: 100%; background-color: green; text-decoration: none;
     }
     .btn:not(:last-child) { margin-bottom: 10px; }
 
-    button[type="button"] {margin-top: 10px; padding: 10px 15px; font-weight: bold; font-size: 18px;
+    button[type="button"] {margin-top: 10px; padding: 8px 15px; font-weight: bold; font-size: 19px;
       background-color: #b7d5ac; color: blue; border-radius: 10px;
       cursor: pointer; width: 100%; margin-bottom: 8px;
     }
@@ -147,9 +147,11 @@
 </div>
 
 
-<button class="btn" onclick="limparAssinatura()" style="background-color: white">Limpar Assinatura</button>
-<button class="btn" onclick="document.getElementById('fotoInput').click()" style="background-color: white">📷 Incluir Foto no Relatório</button>
-<button type="button" onclick="obterNumeroGlobal()">✅ Finalizar Relatório</button>
+<div style="padding: 6px 10px; margin-top: 1px; background-color: #D6FFFF; border-radius: 4px">
+<button class="btn" onclick="limparAssinatura()" style="background-color: white; color: #15400e; margin-top: 5px">Limpar Assinatura</button>
+<button class="btn" onclick="document.getElementById('fotoInput').click()" style="background-color: white; color: #15400e; margin-top: 2px">📸 Incluir Foto no Relatório</button>
+</div>
+<button type="button" onclick="obterNumeroGlobal(); this.style.backgroundColor='#D6FFFF'; this.style.color='white';" style="border: 3px solid #15400e">✅ Finalizar Relatório</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
 
@@ -459,13 +461,7 @@ document.addEventListener('DOMContentLoaded', () => {
     campoData.value = `${yyyy}-${mm}-${dd}`;
   }
 
-  // HORA INÍCIO
-  const campoHoraInicio = document.querySelector('input[name="hora_inicio"]');
-  if (campoHoraInicio && !campoHoraInicio.value) {
-    const hh = String(agora.getHours()).padStart(2, '0');
-    const mm = String(agora.getMinutes()).padStart(2, '0');
-    campoHoraInicio.value = `${hh}:${mm}`;
-  }
+  
 
   // ENDEREÇO (GPS)
   const campoLocal = document.getElementById('local');
@@ -584,6 +580,7 @@ async function compartilharFotos() {
 }</script>
 </body>
 </html>
+
 
 
 
